--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,21 +16,30 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     display: block;
+}
+
+.showcase:hover .showcase{
+    filter: blur(0px);
+    -webkit-filter: blur(0  px);
     filter: blur(10px);
     -webkit-filter: blur(10px); // required for some browsers
     transition: all 1000ms;
 }
-
-.showcase:hover::after {
+/*
+.showcase:hover .showcase{
     filter: blur(0px);
     -webkit-filter: blur(0  px);
-}
-
-.showcase:hover .content {
-    filter: blur(2px);
-    -webkit-filter: blur(2px);
-}
-
+    filter: blur(10px);
+    -webkit-filter: blur(10  px);
+    //transition: all 1000ms;
+}*/
+/*
+.content:hover .showcase {
+    content: '';
+    display: block;
+    filter: blur(0px);
+    -webkit-filter: blur(0px);
+}*/
 .content {
     position: absolute;
     z-index: 1;
@@ -41,7 +50,7 @@ body {
     width: 300px;
     height: 350px;
     text-align: center;
-    transition: all 1000ms;
+    //transition: all 1000ms;
     
 }
 
